--- a/IBS.csproj
+++ b/IBS.csproj
@@ -42,6 +42,9 @@
       <HintPath>packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="NCalc, Version=1.3.8.0, Culture=neutral, PublicKeyToken=973cde3f1cafed03, processorArchitecture=MSIL">
+      <HintPath>packages\ncalc.1.3.8\lib\NCalc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -56,15 +59,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\ControlCreate.cs" />
+    <Compile Include="Classes\Properties.cs" />
     <Compile Include="IntersectBalanceSystem.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="IntersectBalanceSystem.Designer.cs">
       <DependentUpon>IntersectBalanceSystem.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\Calculate.cs" />
-    <Compile Include="Models\Updating.cs" />
+    <Compile Include="Classes\Calculate.cs" />
+    <Compile Include="Classes\Updating.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="IntersectBalanceSystem.resx">
