--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DarkUI" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
+  <package id="ncalc" version="1.3.8" targetFramework="net472" />
 </packages>
